fix join button vertical alignment

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -2,7 +2,7 @@
 {% include css/agency.css %}
 
 #join input { display: inline-block; margin-bottom: 10px; }
-
+#join .btn { vertical-align: bottom; }
 #join input[type=email],
 #join input[type=text] { width: 300px; }
 
